# OpenHoW

./: CMakeLists.txt  CONTRIBUTORS  README.md  setup_cmake.bat
doc/: Maps.md
doc/file-formats/: FAC.md  HIR.md  MAD_MTD.md  MCAP.md  NO2.md  OFS.md  PMG.md  POG.md  PTG.md  README.md  TAB.md  TIM.md  VTX.md
docker/ubuntu20.04/: Dockerfile
src/engine/: App.h  CMakeLists.txt  ModManager.cpp  ModelResource.h  Property.h  Timer.h
src/engine/audio/: AudioManager.cpp
src/engine/game/: AAirship.h  Actor.h  ActorManager.cpp  ActorManager.h  GameManager.cpp  GameManager.h
src/engine/graphics/: ShaderManager.cpp  TextureAtlas.cpp
src/engine/loaders/: FacLoader.cpp  FacLoader.h  HirLoader.cpp  HirLoader.h  Loaders.h  MinLoader.cpp  MinLoader.h  No2Loader.cpp  No2Loader.h  VtxLoader.cpp
src/engine/script/: JsonReader.cpp
src/extractor/: CMakeLists.txt  extractor.c  fac.c  fac.h  version.c
